# File-Converter-in-C-

./: README.md
FileConverter/: .gitignore  CMakeLists.txt  FileConverterUI.pro  README.md  test.txt
FileConverter/include/: FileConverter.h
FileConverter/src/: FileConverter.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp  qt_main.cpp
FileConverter/test/: test_main.cpp
